Threads::print_on_error assumes that the heap has been set up

XMLWordPrintable

    • gc
    • b26

        Threads::print_on_error calls Universe::heap()->gc_threads_do(...) without checking the return value of Universe::heap(). Since this function can be called before the heap has been set up, I think we need to NULL check here.

        hs_err output from early failure without the fix:
        Other Threads:

        [error occurred during error reporting (printing all threads), id 0xb, SIGSEGV (0xb) at pc=0x0000000104cbb609]

        and with a null check:
        Other Threads:

        =>0x00007ff10980e220 (exited) JavaThread "Unknown thread" [_thread_in_vm, id=7171, stack(0x00007000083dc000,0x00007000084dc000)]

              Assignee:
              Stefan Karlsson
              Reporter:
              Stefan Karlsson
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: