8246434: Threads::print_on_error assumes that the heap has been set up

Reviewed-by: dholmes